@@ -1,155 +1,173 @@
-/* $Id: mve_main.c,v 1.2 2003-02-19 00:42:40 btb Exp $ */
+/* $Id: mve_main.c,v 1.2.2.1 2003-06-08 11:03:14 btb Exp $ */
 
-#ifdef HAVE_CONFIG_H
-#include <conf.h>
-#endif
-
-#include <string.h>
-#include <sys/types.h>
-#include <sys/stat.h>
-#include <fcntl.h>
-#include <unistd.h>
+#include <stdlib.h>
+#include <assert.h>
 
 #include <SDL.h>
 
-#include "mvelib.h"
+#include "libmve.h"
 
-#define SWAPINT(x)   (((x)<<24) | (((unsigned int)(x)) >> 24) | (((x) &0x0000ff00) << 8) | (((x) & 0x00ff0000) >> 8))
 
-#define MAX_FILES 256
+static SDL_Surface *g_screen;
+static unsigned char g_palette[768];
+static int g_truecolor;
 
-extern int g_spdFactorNum;
-extern int g_sdlVidFlags;
-extern int g_loop;
-
-void initializeMovie(MVESTREAM *mve);
-void playMovie(MVESTREAM *mve);
-void shutdownMovie(MVESTREAM *mve);
+static int doPlay(const char *filename);
 
 static void usage(void)
 {
-    fprintf(stderr, "usage: mveplay [-f] [-l] [-s <n>] [<mvlfile>] <filename>\n"
-			"-f\tFullscreen mode\n"
-			"-s\tSpeed Factor <n>\n"
-			);
-    exit(1);
+	fprintf(stderr, "usage: mveplay filename\n");
+	exit(1);
 }
 
-static int doPlay(int filehandle)
+int main(int c, char **v)
 {
-    MVESTREAM *mve = mve_open_filehandle(filehandle);
-    if (mve == NULL) {
-        fprintf(stderr, "can't open MVE file\n");
-		exit(1);
-	}
-
-    initializeMovie(mve);
-    playMovie(mve);
-    shutdownMovie(mve);
-
-    mve_close_filehandle(mve);
-
-    return 1;
-}
-
-int main(int argc, char *argv[])
-{
-	int i, filehandle;
-	char *mvlfile = NULL, *mvefile = NULL;
-
-	for (i = 1; i < argc; i++) {
-		if (!strcmp(argv[i], "-h"))
-			usage();
-
-		if (!strcmp(argv[i], "-f"))
-			g_sdlVidFlags |= SDL_FULLSCREEN;
-
-		if (!strcmp(argv[i], "-l"))
-			g_loop = 1;
-
-		if (!strcmp(argv[i], "-s")) {
-			if (argc < i + 2)
-				usage();
-			g_spdFactorNum = atoi(argv[i + 1]);
-			i++;
-		}
-
-		if (strchr(argv[i], '.') && !strcasecmp(strchr(argv[i], '.'), ".mvl"))
-			mvlfile = argv[i];
-
-		if (strchr(argv[i], '.') && !strcasecmp(strchr(argv[i], '.'), ".mve"))
-			mvefile = argv[i];
-	}
-
-	if (mvlfile) {
-		int nfiles;
-		char filename[MAX_FILES][13];
-		int filesize[MAX_FILES];
-		char sig[4];
-
-#ifdef O_BINARY
-		filehandle = open(mvlfile, O_RDONLY | O_BINARY);
-#else
-		filehandle = open(mvlfile, O_RDONLY);
-#endif
-		if (filehandle == -1) {
-			fprintf(stderr, "Error opening %s\n", mvlfile);
-			exit(1);
-		}
-		if ((read(filehandle, sig, 4) < 4) ||
-			(strncmp(sig, "DMVL", 4)) ||
-			(read(filehandle, &nfiles, 4) < 4)) {
-			fprintf(stderr, "Error reading %s\n", mvlfile);
-			exit(1);
-		}
-#ifdef WORDS_BIGENDIAN
-		nfiles = SWAPINT(nfiles);
-#endif
-		if (nfiles > MAX_FILES) {
-			fprintf(stderr, "Error reading %s: nfiles = %d, MAX_FILES = %d\n",
-					mvlfile, nfiles, MAX_FILES);
-		}
-		for (i = 0; i < nfiles; i++) {
-			if ((read(filehandle, filename[i], 13) < 13) ||
-				(read(filehandle, &filesize[i], 4) < 4) ||
-				(strlen(filename[i]) > 12))	{
-				fprintf(stderr, "Error reading %s\n", mvlfile);
-				exit(1);
-			}
-#ifdef WORDS_BIGENDIAN
-			filesize[i] = SWAPINT(filesize[i]);
-#endif
-		}
-
-		for (i = 0; i < nfiles; i++) {
-			if (mvefile) {
-				if (!strcasecmp(filename[i], mvefile))
-					break;
-				else
-					lseek(filehandle, filesize[i], SEEK_CUR);
-			} else
-				printf("%13s\t%d\n", filename[i], filesize[i]);
-		}
-		if (!mvefile)
-			exit(0);
-
-	} else if (mvefile) {
-#ifdef O_BINARY
-		filehandle = open(mvefile, O_RDONLY | O_BINARY);
-#else
-		filehandle = open(mvefile, O_RDONLY);
-#endif
-	} else
+	if (c != 2)
 		usage();
 
-    if (SDL_Init(SDL_INIT_VIDEO | SDL_INIT_AUDIO) < 0)
-    {
-        fprintf(stderr, "Couldn't initialize SDL: %s\n",SDL_GetError());
-        exit(1);
-    }
-    atexit(SDL_Quit);
+	if (SDL_Init(SDL_INIT_VIDEO | SDL_INIT_AUDIO) < 0)
+	{
+		fprintf(stderr, "Couldn't initialize SDL: %s\n",SDL_GetError());
+		exit(1);
+	}
+	atexit(SDL_Quit);
 
-	doPlay(filehandle);
+	return doPlay(v[1]);
+}
+
+static unsigned int fileRead(void *handle, void *buf, unsigned int count)
+{
+	unsigned numread;
+
+	numread = fread(buf, 1, count, (FILE *)handle);
+	return (numread == count);
+}
+
+static void showFrame(unsigned char *buf, unsigned int bufw, unsigned int bufh,
+					  unsigned int sx, unsigned int sy,
+					  unsigned int w, unsigned int h,
+					  unsigned int dstx, unsigned int dsty)
+{
+	int i;
+	unsigned char *pal;
+	SDL_Surface *sprite;
+	SDL_Rect srcRect, destRect;
+
+	assert(bufw == w && bufh == h);
+
+	if (g_truecolor)
+		sprite = SDL_CreateRGBSurfaceFrom(buf, bufw, bufh, 16, 2 * bufw, 0x7C00, 0x03E0, 0x001F, 0);
+	else
+	{
+		sprite = SDL_CreateRGBSurfaceFrom(buf, bufw, bufh, 8, bufw, 0x7C00, 0x03E0, 0x001F, 0);
+
+		pal = g_palette;
+		for(i = 0; i < 256; i++)
+		{
+			sprite->format->palette->colors[i].r = (*pal++) << 2;
+			sprite->format->palette->colors[i].g = (*pal++) << 2;
+			sprite->format->palette->colors[i].b = (*pal++) << 2;
+			sprite->format->palette->colors[i].unused = 0;
+		}
+	}
+
+	srcRect.x = sx;
+	srcRect.y = sy;
+	srcRect.w = w;
+	srcRect.h = h;
+	destRect.x = dstx;
+	destRect.y = dsty;
+	destRect.w = w;
+	destRect.h = h;
+
+	SDL_BlitSurface(sprite, &srcRect, g_screen, &destRect);
+	if ( (g_screen->flags & SDL_DOUBLEBUF) == SDL_DOUBLEBUF )
+		SDL_Flip(g_screen);
+	else
+		SDL_UpdateRects(g_screen, 1, &destRect);
+	SDL_FreeSurface(sprite);
+}
+
+static void setPalette(unsigned char *p, unsigned start, unsigned count)
+{
+	//Set color 0 to be black
+	g_palette[0] = g_palette[1] = g_palette[2] = 0;
+
+	//Set color 255 to be our subtitle color
+	g_palette[765] = g_palette[766] = g_palette[767] = 50;
+
+	//movie libs palette into our array
+	memcpy(g_palette + start*3, p+start*3, count*3);
+}
+
+static int pollEvents()
+{
+	SDL_Event event;
+
+	while (SDL_PollEvent(&event))
+	{
+		switch(event.type)
+		{
+		case SDL_QUIT:
+			return 1;
+		case SDL_KEYDOWN:
+			switch (event.key.keysym.sym)
+			{
+			case SDLK_ESCAPE:
+			case SDLK_q:
+				return 1;
+			case SDLK_f:
+				SDL_WM_ToggleFullScreen(g_screen);
+				break;
+			default:
+				break;
+			}
+			break;
+		default:
+			break;
+		}
+	}
+
+	return 0;
+}
+
+static int doPlay(const char *filename)
+{
+	int result;
+	int done = 0;
+	FILE *mve;
+	MVE_videoSpec vSpec;
+
+	mve = fopen(filename, "rb");
+	if (mve == NULL) {
+		fprintf(stderr, "can't open MVE file\n");
+		return 1;
+	}
+
+	memset(g_palette, 0, 768);
+
+	MVE_sndInit(1);
+	MVE_memCallbacks(malloc, free);
+	MVE_ioCallbacks(fileRead);
+	MVE_sfCallbacks(showFrame);
+	MVE_palCallbacks(setPalette);
+
+	MVE_rmPrepMovie(mve, -1, -1, 1);
+
+	MVE_getVideoSpec(&vSpec);
+
+	g_screen = SDL_SetVideoMode(vSpec.screenWidth, vSpec.screenHeight, vSpec.truecolor?16:8, SDL_ANYFORMAT);
+
+	g_truecolor = vSpec.truecolor;
+
+	while (!done && (result = MVE_rmStepMovie()) == 0)
+	{
+		done = pollEvents();
+	}
+
+	MVE_rmEndMovie();
+
+	fclose(mve);
 
 	return 0;
 }
